test/yacc/err_inherit1.error
YACC: e - line 26 of "./test/err_inherit1.y", syntax error
%type <nlist> declaration namelist(<cval>, <tval>) locnamelist(<tval>)
                                  ^
